# normalize-punctuation

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  utils.rs  walk.rs
